--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -1,29 +1,40 @@
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
+---
+interface Props {
+	title: string;
+	description: string;
+}
+const {
+    title,
+    description
+} = Astro.props as Props
+---
 
-<meta name="theme-color" content="#E93679">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
+
+    <meta name="theme-color" content="#E93679">
 
 
-<meta name="description" content="Welcome to Lerndmina.Dev
-I like to make cool web stuff. Come take a look!">
+    <meta name="description" content={description}>
 
-<!-- Open Graph / Facebook -->
-<meta property="og:title" content="Lerndmina.Dev • Web dev & Sys Admin">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://lerndmina.dev/">
-<meta property="og:description" content="Welcome to Lerndmina.Dev
-I like to make cool web stuff. Come take a look!">
-<meta property="og:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png">
-<meta property="og:site_name" content="Lerndmina.Dev">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content={title}>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lerndmina.dev/">
+    <meta property="og:description" content={description}>
+    <meta property="og:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png">
+    <meta property="og:site_name" content="Lerndmina.Dev">
 
 
-<!-- Twitter -->
-<meta property="twitter:title" content="<?php echo $title; ?>" />
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://lerndmina.dev/">
-<meta property="twitter:description" content="Welcome to Lerndmina.Dev
-I like to make cool web stuff. Come take a look!">
-<meta property="twitter:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png">
+    <!-- Twitter -->
+    <meta property="twitter:title" content={title}>
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://lerndmina.dev/">
+    <meta property="twitter:description" content={description}>
+    <meta property="twitter:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png">
+    <title>{title}</title>
+</head>
