--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -1,21 +1,26 @@
+---
+// Data imports
+import { navData } from "../data/navdata";
+import Link from "./Link.astro";
+---
+
 <div id="content-wrap" class="px-1 pb-10">
     <div class="block mr-auto ml-1 h-auto font-sans text-xl font-normal">
-      <a class="pt-1 -mt-1 bg-gradient-to-r from-gradient1 to-gradient2 text-transparent bg-clip-text font-bold" href="/">
-        &lt;/Lerndmina.Dev&gt;
-        <!-- &lt;Nebu//a&gt -->
-      </a>
+      <Link href="/" text="&lt;/Lerndmina.Dev&gt;" extraclasses="from-gradient1 to-gradient2 font-bold"/>
     </div>
-    <div
-         class="font-sans text-center text-3xl text-notwhite">
-      <a class="bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text" href="/">
-      Home </a>-
-      <a class="bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text" href="/portfolio">
-      Blog </a>
-      -
-      <a class="bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text" href="/assets/CV.pdf" target="new">
-      My CV</a>
-      -
-      <a class="bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text" href="/contact">
-      Contact Me</a>
+    <div class="font-sans text-center text-3xl text-notwhite">
+
+      <!-- Grab the nav list from data/navdata to populate the nav list -->
+      {navData.map((item) => <Link href={item.path} text={item.name} extraclasses="px-2"/>)}
+
     </div>
-  </div>
+</div>
+
+<script>
+  const links = document.querySelectorAll("[data-navLink]");
+  links.forEach((link) => {
+    if(link.getAttribute("href") === window.location.pathname){
+      link.classList.add("nav-link-selected")
+    }
+  })
+</script>
