--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,5 +37,5 @@ import MainLayout from "../layouts/MainLayout.astro";
             <div class="email-sprite m-2"></div>
         </a>
     </div>
-    <script src="../components/typewriter.js"></script>
+    <script src="../js/typewriter.js"></script>
 </MainLayout>
