--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@ import Link from "./Link.astro";
 
 ---
 
-<footer class="sticky top-[100vh] pb-5 text-center min-w-full text-lg">
+<footer class="sticky top-[100vh] py-10 text-center min-w-full text-md md:text-lg">
     <p><noscript class="font-bold text-red-500 text-xl">Javascript is disabled, you may face errors or strangeness. <a href="hhttps://support.clio.com/hc/en-us/articles/360040902634-How-to-Enable-JavaScript-in-Your-Web-Browser" class="font-bold text-red-500">Enable it here.</a></noscript></p>
     <p class="font-semibold"><Link href="https://lerndmina.dev" text="Lerndmina.Dev"/> | Copyright &copy; <span id="copyright"></span> | All rights reserved</p>
 </footer>
