--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -8,7 +8,7 @@ import Link from "./Link.astro";
     <div class="block mr-auto ml-1 h-auto font-sans text-xl font-normal">
       <Link href="/" text="&lt;/Lerndmina.Dev&gt;" extraclasses="from-gradient1 to-gradient2 font-bold"/>
     </div>
-    <div class="font-sans text-center text-3xl text-notwhite">
+    <div class="font-sans text-center text-2xl md:text-3xl text-notwhite">
 
       <!-- Grab the nav list from data/navdata to populate the nav list -->
       {navData.map((item) => <Link href={item.path} text={item.name} extraclasses="px-2"/>)}
