--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -4,17 +4,25 @@ import Link from "../components/Link.astro";
 import { slugify, formatDate } from "../js/utils";
 
 import { Image, Picture } from "@astrojs/image/components";
+import { CollectionEntry } from "astro:content";
 
 const { post } = Astro.props;
-const { title, date, author, image, description, category, alt } =
-  post.frontmatter;
-console.log(date);
+
+interface Props {
+  post: CollectionEntry<"blog">;
+}
+
+const { title, date, author, image, description, category, alt } = post.data;
+
+const url = `/blog/${post.slug}/`;
+
+console.log(`POST URLS ${url}`);
 ---
 
 <div class="p-10 text-notwhite">
   <!--Card 1-->
   <div class="py-5 w-full md:max-w-full md:flex bg-darkbg rounded-md">
-    <a href={post.url}>
+    <a href={url}>
       <Image
         class="pl-5 h-48 w-auto md:h-auto md:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden"
         title={title}
@@ -27,7 +35,7 @@ console.log(date);
     <div class="px-4 flex flex-col justify-between leading-norma">
       <div class="mb-8">
         <div class="font-bold text-xl mb-2">
-          <Link href={post.url} text={title} />
+          <Link href={url} text={title} />
         </div>
         <p class="text-base">{description}</p>
       </div>
