--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,17 +1,31 @@
 ---
-import Link from "../components/Link.astro";
-import MainLayout from "./MainLayout.astro";
-
-import { slugify, formatDate } from "../js/utils";
-
-const { frontmatter } = Astro.props;
-
-const { title, description, date, author, image, draft, category, url } =
-  frontmatter;
-
-import { Image, Picture } from "@astrojs/image/components";
-
-import "../styles/blog.css";
+import { getCollection, CollectionEntry } from "astro:content";
+import { Image } from "@astrojs/image/components";
+// component import
+import MainLayout from "../../layouts/MainLayout.astro";
+import Link from "../../components/Link.astro";
+// util imports
+import { formatBlogPosts, slugify, formatDate } from "../../js/utils";
+export async function getStaticPaths() {
+  const allPosts = await getCollection("blog");
+  const formattedPosts = formatBlogPosts(allPosts);
+  return formattedPosts.map((post) => ({
+    params: { slug: post.slug },
+    props: {
+      post,
+    },
+  }));
+}
+interface Props {
+  post: CollectionEntry<"blog">;
+}
+const { post } = Astro.props;
+const { title, description, date, category, author, image } = post.data;
+const { Content } = await post.render();
+const allPosts = await getCollection("blog");
+const formattedPosts = formatBlogPosts(allPosts, {
+  sortByDate: false,
+});
 ---
 
 <MainLayout title={title} description={description}>
@@ -45,7 +59,8 @@ import "../styles/blog.css";
     </header>
     <div class="post-content sm:px-8 px-16">
       <div class="content prose prose-invert">
-        <slot />
+        <!-- ! Page content goes here -->
+        <Content />
       </div>
     </div>
   </div>
