--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -7,13 +7,9 @@ var mm = String(date.getMonth() + 1).padStart(2, "0"); //January is 0!
 var yyyy = date.getFullYear();
 
 var today = yyyy + "/" + mm + "/" + dd;
-
-var updateStatement = `Site last updated ${today}`;
 ---
 
-<footer
-  class="sticky top-[100vh] py-10 text-center min-w-full text-md md:text-lg"
->
+<footer class="sticky top-[100vh] py-10 text-center min-w-full text-md md:text-lg">
   <p>
     <noscript class="font-bold text-red-500 text-xl"
       >Javascript is disabled, you may face errors or strangeness. <a
@@ -22,14 +18,15 @@ var updateStatement = `Site last updated ${today}`;
       ></noscript
     >
   </p>
-  <p class="font-semibold" title={updateStatement}>
+  <p class="font-semibold">
     <Link href="https://lerndmina.dev" text="Lerndmina.Dev" /> | Copyright &copy;
     <span id="copyright"></span> | All rights reserved
+  </p>
+  <p class="text-xs">
+    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 | Last updated {today}
   </p>
 </footer>
 
 <script>
-  document.querySelector("#copyright").textContent = new Date()
-    .getFullYear()
-    .toString();
+  document.querySelector("#copyright")!.textContent = new Date().getFullYear().toString();
 </script>
