Added tailwind link

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -23,7 +23,9 @@ var today = yyyy + "/" + mm + "/" + dd;
     <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 | Last updated {today}
+    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {
+      today
+    }
   </p>
 </footer>
 
