Squashed commit of the following:
commit 3e43cf92cf93b40a1d31dfdf73c66cac8c582152
Author: Adam <wild@lerndmina.dev>
Date:   Tue Feb 28 02:57:24 2023 +0000

    Build for 61f690370bfc8c2f4951a3bc842f03ab280573d2

commit 61f690370bfc8c2f4951a3bc842f03ab280573d2
Author: Adam <wild@lerndmina.dev>
Date:   Tue Feb 28 02:56:05 2023 +0000

    Non local links open in _blank

commit 25249f8bdfdaac1ac91fc4d1472f33d1fb0f600a
Author: Adam <wild@lerndmina.dev>
Date:   Tue Feb 28 02:30:08 2023 +0000

    Added tailwind link

--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,19 +1,24 @@
 ---
 interface Props {
-	text: string;
-	href: string;
-    extraclasses?: string;
-    onclick?: string;
+  text: string;
+  href: string;
+  extraclasses?: string;
+  onclick?: string;
 }
-const {
-    text,
-    href,
-    extraclasses,
-    onclick,
-} = Astro.props as Props
+const { text, href, extraclasses, onclick } = Astro.props as Props;
 
-const classes = `bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text link ${extraclasses}`;
+const homeUrl = "lerndmina.dev";
+var target;
 
+const classes = `bg-gradient-to-r from-notwhite to-notwhite hover:from-gradient1 hover:to-gradient2 text-transparent bg-clip-text link ${
+  extraclasses ? extraclasses : ""
+}`;
+
+const regex = "^(https?://)?(www.)?([^/]+)";
+const found = href.match(regex);
+if (found && found[3] != homeUrl) {
+  target = 'target="_blank"';
+}
 ---
-{console.log(classes.toString())}
-<a onclick={onclick} class={classes} href={href}>{text}</a>
+
+<a onclick={onclick} {target} class={classes} href={href}>{text}</a>
