--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,13 +19,10 @@ var today = yyyy + "/" + mm + "/" + dd;
     >
   </p>
   <p class="font-semibold">
-    <Link href="https://lerndmina.dev" text="Lerndmina.Dev" /> | Copyright &copy;
-    <span id="copyright"></span> | All rights reserved
+    <Link href="https://lerndmina.dev" text="Lerndmina.Dev" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {
-      today
-    }
+    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {today}
   </p>
 </footer>
 
