--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -26,7 +26,7 @@ const { page } = Astro.props;
   <h1 class="mx-auto text-4xl text-center">Blog:</h1>
   <!-- <h1 class="mx-auto text-2xl text-center">Latest posts sorted first.</h1> -->
 
-  {page.data.map((post) => <PostCard {post} />)}
+  {page.data.map((post: CollectionEntry<"blog">) => <PostCard {post} />)}
 
   <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
 </MainLayout>
