Fixed typewriter on astro:load

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -29,6 +29,7 @@ const url = `/blog/${post.slug}/`;
         title={`A header image for the post "${title}"`}
         src={image.src}
         width={400}
+        height={400 / aspectRatio}
         aspectRatio={aspectRatio}
         format={"avif"}
         alt={`A header image for the post "${title}"`}
