--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -33,32 +33,19 @@ const formattedPosts = formatBlogPosts(allPosts, {
   <div class="max-w-4xl m-auto">
     <header>
       <div class="mx-auto pb-10 container text-center">
-        <small class="text-lg">
-          <Link
-            href={`/blog/category/${slugify(category)}/`}
-            text={`Category: ${category}`}
-          />
-        </small>
-        <h1 class="text-2xl">{title}</h1>
-        <p class="text-xl">
-          by <Link href={`/blog/author/${slugify(author)}/`} text={author} /> • {
-            formatDate(date)
-          }
+        <h1 class="text-5xl pb-1">{title}</h1>
+        <p class="text-md">
+          by <Link href={`/blog/author/${slugify(author)}/`} text={author} /> • {formatDate(date)}
         </p>
-      </div>
-      <div class="rounded-md overflow-hidden mx-auto p-10">
-        <Image
-          class="drop-shadow-lg"
-          src={image.src}
-          alt={image.alt}
-          width={600}
-          aspectRatio={imageRatio}
-          format={"avif"}
-          fit={"cover"}
-        />
+        <small class="text-sm">
+          <Link href={`/blog/category/${slugify(category)}/`} text={`# ${category}`} />
+        </small>
       </div>
     </header>
-    <div class="post-content sm:px-8 px-16">
+    <div class="flex justify-center rounded-md overflow-hidden mx-auto p-10 pt-20">
+      <Image class="drop-shadow-lg" src={image.src} alt={image.alt} width={800} height={700 / imageRatio} aspectRatio={imageRatio} format={"avif"} fit={"cover"} />
+    </div>
+    <div class="flex justify-center sm:px-8 px-16">
       <div class="content prose prose-invert">
         <!-- ! Page content goes here -->
         <Content />
